update fields name
